--- a/pom.xml
+++ b/pom.xml
@@ -495,4 +495,20 @@
             </reporting>
         </profile>
     </profiles>
+<distributionManagement>
+<repository>
+<id>my-release</id>
+<name>my-release</name>
+<url>
+http://localhost:8081/nexus/content/repositories/my-release/
+</url>
+</repository>
+<snapshotRepository>
+<id>my-snapshot</id>
+<name>my-snapshot</name>
+<url>
+http://localhost:8081/nexus/content/repositories/my-snapshot/
+</url>
+</snapshotRepository>
+</distributionManagement>
 </project>
